Feat: Voto de marcações
